# zkclear

./: .gitignore  Cargo.toml  README.md
examples/: acyclicity_check.rs  ancestor_identification.rs  d_separation.rs  dml.rs  intervention.rs  linear_regression_closed_form.rs  linear_regression_closed_form_inference.rs  sdcd.rs
src/: lib.rs
src/gadget/: dml.rs  fixed_point.rs  graph.rs  linear_regression.rs  linear_regression_closed_form.rs  matrix.rs  mod.rs  sdcd.rs
src/scaffold/: cmd.rs  mod.rs
